Fix whitespace issue with top border for current day in month view

--- a/shared/gh/css/gh.components.css
+++ b/shared/gh/css/gh.components.css
@@ -152,6 +152,14 @@
     border-top-width: 6px;
 }
 
+.fc-month-view .fc-bg td.fc-today:before {
+    border-top-width: 6px;
+    border-top-style: solid;
+    content: "";
+    width: 100%;
+    position: absolute;
+}
+
 .fc-ltr .fc-basic-view .fc-day-number {
     padding: 5px;
     text-align: left;
@@ -220,6 +228,11 @@ td.fc-widget-content {
 
 .fc-month-view tbody > tr > td.fc-day.fc-widget-content {
     border-style: solid !important;
+}
+
+.fc-month-view tbody > tr > td.fc-today.fc-widget-content {
+    border-top-width: 0;
+    position: relative;
 }
 
 .fc-day-grid .fc-week:first-child tbody tr td,
